tests/ui/parser/macro/issue-37234.rs
macro_rules! failed {
    () => {{
        let x = 5 ""; //~ ERROR found `""`
    }}
}

fn main() {
    failed!();
}
